# tree-sitter-rstml

./: .envrc  .gitignore  .prettierrc.json  Cargo.toml  LICENSE  README.md  base.grammar.js  binding.gyp  flake.nix  grammar.js  package.json  rust.grammar.js
base_queries/: folds.scm  highlights.scm  indents.scm
bindings/node/: binding.cc  index.js  rstml.js  rustWithRstml.js  rust_with_rstml.js  test.js
bindings/rust/: README.md  build.rs  lib.rs
lua/: tree-sitter-rstml.lua
plugin/: tree-sitter.rstml.vim
queries/: highlights.scm  injections.scm
queries/rust_with_rstml/: folds.scm  highlights.scm  indents.scm  injections.scm
rstml/: grammar.js
rstml/corpus/: nodes.txt
rstml/queries/: highlights.scm
rstml/src/: grammar.json  node-types.json  scanner.c
rust_with_rstml/: grammar.js
rust_with_rstml/corpus/: macro.txt
rust_with_rstml/src/: grammar.json  node-types.json  scanner.c
scripts/: create-queries  import-scanners
src/: grammar.json  node-types.json  scanner.c
